examples/errors/parsing/fun_simple-empty-eff.cn
fun identity : Int -> Int [ ] = {
  n -> n
}

main : () [impure] = ()
